<resources>
    <string name="app_name">FCF Immobilier</string>
    <string name="google_api_key" translatable="false">AIzaSyDnRJ1ze4TmAyhBccIKfIH_SJXulSVrGdk</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_motto">L immobilier sur mesure</string>
    <string name="drawer_title_offres">Offres</string>
    <string name="drawer_accueil">Accueil</string>
    <string name="drawer_vente">Ventes</string>
    <string name="drawer_location">Location</string>
    <string name="drawer_recherche">Recherche</string>
    <string name="drawer_favoris">Favoris</string>
    <string name="drawer_title_connectez_vous">Connectez-vous</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_reseaux_sociaux">Réseaux Sociaux</string>
    <string name="drawer_title_informations">Informations</string>
    <string name="drawer_mentions_legales">Mentions Légales</string>
    <string name="drawer_a_propos">A Propos</string>
    <string name="drawer_aide">Aide</string>
    <string name="content_main_vente">Vente</string>
    <string name="content_main_location">Location</string>
    <string name="content_main_recherche">Recherche</string>
    <string name="content_main_favoris">Favoris</string>
    <string name="content_main_contact">Contact</string>
    <string name="content_main_social">Social</string>
    <string name="content_ventes_prix">Prix</string>
    <string name="content_ventes_area">Superficie</string>
    <string name="content_ventes_date">Date</string>
    <string name="content_nb_of_items">Nombre de résultats: </string>
    <string name="toast_favorite_added">Ajouté à vos favoris</string>
    <string name="toast_favorite_removed">Retiré de vos favoris</string>
    <string name="produit_area_not_available">Sur demande</string>
    <string name="url_produit_vente"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente]]></string>
    <string name="url_produit_vente_date_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=date&sort=asc]]></string>
    <string name="url_produit_vente_date_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=date&sort=desc]]></string>
    <string name="url_produit_vente_prix_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=price&sort=asc]]></string>
    <string name="url_produit_vente_prix_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=price&sort=desc]]></string>
    <string name="url_produit_vente_area_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=area&sort=asc]]></string>
    <string name="url_produit_vente_area_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=vente&order=area&sort=desc]]></string>
    <string name="url_produit_location"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location]]></string>
    <string name="url_produit_location_date_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=date&sort=asc]]></string>
    <string name="url_produit_location_date_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=date&sort=desc]]></string>
    <string name="url_produit_location_prix_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=price&sort=asc]]></string>
    <string name="url_produit_location_prix_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=price&sort=desc]]></string>
    <string name="url_produit_location_area_asc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=area&sort=asc]]></string>
    <string name="url_produit_location_area_desc"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=location&order=area&sort=desc]]></string>
    <string name="url_manipulation_default" translatable="false"><![CDATA[https://api.immotoolbox.com/xml/2.0/AGENCE/produits/?_locale=fr&search[agence][]=216&search[typeTransaction]=]]></string>
    <string name="url_manipulation_search_vente" translatable="false">vente</string>
    <string name="url_manipulation_search_location" translatable="false">location</string>
    <string name="toast_price_asc">Prix en ordre croissant</string>
    <string name="toast_price_desc">Prix en ordre décroissant</string>
    <string name="toast_area_asc">Superficie totale en ordre croissant</string>
    <string name="toast_area_desc">Superficie totale en ordre décroissant</string>
    <string name="toast_date_asc">Date de dernière modification en ordre croissant</string>
    <string name="toast_date_desc">Date de dernière modification en ordre décroissant</string>
    <string name="content_produit_detail_ref">Référence:</string>
    <string name="content_produit_detail_type">Type:</string>
    <string name="content_produit_detail_nb_rooms">Nombre de chambres:</string>
    <string name="content_produit_detail_total_area">Superficie totale:</string>
    <string name="content_produit_detail_living_area">Superficie habitable:</string>
    <string name="content_produit_detail_terrace_area">Superficie de la terrasse:</string>
    <string name="content_produit_detail_building">Immeuble:</string>
    <string name="content_produit_detail_district">Quartier:</string>
    <string name="content_produit_detail_parking">Emplacement(s) parking:</string>
    <string name="content_produit_detail_cellar">Cave(s):</string>
    <string name="content_produit_detail_datel_created">Date de création:</string>
    <string name="content_produit_detail_datel_last_modified">Dernière modification:</string>
    <string name="content_produit_detail_gallerie_images">Galerie</string>
    <string name="content_produit_detail_button_send_product">Envoyé fiche\nproduit:</string>
    <string name="content_produit_detail_button_send_info_agency">Contacter\nl\'agence:</string>
    <string name="content_produit_detail_email_agency" translatable="false">fcf@fcfrealestate.com</string>
    <string name="content_produit_detail_email_signature">Envoyé de l\'application Android Cristea-Flandrin Immobilier</string>
    <string name="content_produit_detail_email_subject_product">Détails supplémentaires offre immobilière</string>
    <string name="content_produit_detail_email_body_product">Je souhaiterais avoir plusieurs d\'informations concernant ce produit:</string>
    <string name="content_produit_detail_email_subject_information">Demande de renseignements</string>
    <string name="content_produit_detail_email_body_information">Je souhaiterais avoir plus d\'informations concernant vos offres.</string>
    <string name="content_produit_detail_email_body_reference">- Référence: </string>
    <string name="content_produit_detail_email_body_price">- Prix: </string>
    <string name="content_produit_detail_email_body_area">- Superficie: </string>
    <string name="content_search_typeproduits_url"><![CDATA[http://api.immotoolbox.com/xml/2.0/MCRE/typesproduits/?_locale=fr]]></string>
    <string name="content_search_detail_append" translatable="false">search</string>
    <string name="content_search_title">Recherche</string>
    <string name="content_search_switch_ventes">Ventes</string>
    <string name="content_search_switch_locations">Locations</string>
    <string name="content_search_checkbox_country">Pays</string>
    <string name="content_search_checkbox_nb_rooms">Nombre de chambres</string>
    <string name="content_search_checkbox_type_product">Type de produit</string>
    <string name="content_search_checkbox_price">Prix</string>
    <string name="content_search_edittext_pricemin_hint">Prix min</string>
    <string name="content_search_edittex_pricemax_hint">Prix max</string>
    <string name="content_search_checkbox_area">Superficie</string>
    <string name="content_search_edittext_areamin_hint">Superficie min</string>
    <string name="content_search_edittex_areamax_hint">Superficie max</string>
    <string name="content_search_button_reset">Annuler</string>
    <string name="content_search_button_search">Rechercher</string>
    <string name="content_search_reset_search">Critères de recherche réinitialisés</string>
    <string name="content_search_invalid_search">Veuillez sélectionner soit "ventes" soit "locations"</string>
    <string name="content_search_result_title">Résultats de la recherche</string>
    <string name="content_search_result_empty">Aucun résultat</string>
    <string name="content_favoris_meny_supp">Supprimer</string>
    <string name="content_favoris_empty_list">Vous n\'avez aucun favori pour le moment.</string>
    <string name="content_contact_adresse_left">Adresse: </string>
    <string name="content_contact_adresse_right">1, Avenue St Laurent</string>
    <string name="content_contact_horaires_left">Horaires: </string>
    <string name="content_contact_horaires_right">09:00 à 18:00 du lundi au vendredi</string>
    <string name="content_contact_tel_left">Téléphone: </string>
    <string name="content_contact_tel_right" translatable="false">+377 93 30 22 46</string>
    <string name="content_contact_fax_left" translatable="false">Fax: </string>
    <string name="content_aide_titre">Aide</string>
    <string name="content_aide_Q1">Comment ajouter des favoris?</string>
    <string name="content_aide_Q2">Comment effacer plusieurs favoris simultanément?</string>
    <string name="content_aide_Q3">Comment accéder à la gallerie d\'images?</string>
    <string name="content_aide_Q4">Comment envoyer un email à l\'agence?</string>
    <string name="content_aide_A1">Une fois que vous êtes sur la page avec tous les détails d\'un produit, cliquez sur l\'icône en forme d\'étoile en haut à droite pour rajouter ce produit en favori. Si le fond de l\'icône est noir, cela veut dire que votre produit a bien été ajouté à votre liste de favoris.</string>
    <string name="content_aide_A2">Pour effacer plusieurs favoris en un coup au lieu de le supprimer un à un, allez sur votre liste de favoris. Maintenant maintenez appuyé n\'importe quel favori de la liste, ce qui va activer le mode suppression. Vous pouvez maintenant sélectionner plusieurs favoris de la liste en les cliquant une fois, et appuyer sur le bouton supprimer pour enlever tous les favoris sélectionnés de la liste.</string>
    <string name="content_aide_A3">Une fois que vous êtes sur la page des détails d\'un produit, vous verrez une image avec plusieurs petites images situées en dessous. Pour visionner ces images en haute qualité, cliquez sur l\'image du haut pour accéder le mode plein écran et ainsi mieux voir les détails des images en plein écran avec la possibilité de zoomer dessus.</string>
    <string name="content_aide_A4">Pour envoyer un mail à l\'agence, allez soit sur la page contact et appuyez sur le bouton avec l\'icône de mail, soit allez sur n\'importe quel détail de produit et cliquez sur un des deux boutons en bas. La dernière option vous permet de contact l\'agence directement pour discuter du produit que vous êtes en train de visionner.</string>
</resources>