<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/aide_linlatxt_padding">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_aide_titre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- _____________________________________________1_____________________________________________-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/aide_linla_marginTop_QA"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_aide_Q1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/aide_linla_marginTop_Question"
                android:text="@string/content_aide_A1" />
        </LinearLayout>

        <!-- _____________________________________________2_____________________________________________-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/aide_linla_marginTop_QA"
            android:background="@color/colorLinLaBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_aide_Q2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/aide_linla_marginTop_Question"
                android:text="@string/content_aide_A2" />
        </LinearLayout>

        <!-- _____________________________________________3_____________________________________________-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/aide_linla_marginTop_QA"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_aide_Q3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/aide_linla_marginTop_Question"
                android:text="@string/content_aide_A3" />
        </LinearLayout>

        <!-- _____________________________________________4_____________________________________________-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/aide_linla_marginTop_QA"
            android:background="@color/colorLinLaBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView133"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_aide_Q4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView143"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/aide_linla_marginTop_Question"
                android:text="@string/content_aide_A4" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

