<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_marginTop_header"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/product_list_linlaReOrderButtons_paddingLeftRight"
        android:paddingRight="@dimen/product_list_linlaReOrderButtons_paddingLeftRight">

        <LinearLayout
            android:id="@+id/layout_btn_reorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_txt_date_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/product_list_reOrderButtons_marginRight"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_keyboard_arrow_up"
                android:text="@string/content_ventes_date"
                android:textColor="#343232"
                android:textSize="@dimen/product_list_btn_txtSize"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_txt_prix_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/product_list_reOrderButtons_marginRight"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_keyboard_arrow_up"
                android:text="@string/content_ventes_prix"
                android:textColor="#343232"
                android:textSize="@dimen/product_list_btn_txtSize" />

            <Button
                android:id="@+id/button_txt_area_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/product_list_reOrderButtons_marginRight"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_keyboard_arrow_up"
                android:text="@string/content_ventes_area"
                android:textColor="#343232"
                android:textSize="@dimen/product_list_btn_txtSize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/ventes_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/produitsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

</LinearLayout>

    <!--style="@style/Widget.AppCompat.Spinner"-->